--- a/hugo.toml
+++ b/hugo.toml
@@ -3,19 +3,26 @@ languageCode = "en-us"
 title = "Pruddieverse"
 theme = "congo"
 
+# This section tells GitHub to download the Congo theme automatically
+[module]
+  [[module.imports]]
+    path = "github.com/jpanther/congo/v2"
+
 [params]
   description = "Cloud & DevOps Engineer focused on Scalable Infrastructure."
-  # The "Hacker" Aesthetic
-  colorScheme = "blowfish" # This gives Congo a deeper, darker "hacker" feel
+  # "blowfish" gives it that high-contrast, professional dark-mode look
+  colorScheme = "blowfish" 
   fontFamily = "inter"
   
-  # Hero Section (Your Option C choice)
+  # The "Alive" Hero Section
   [params.hero]
     title = "Building the Pruddieverse."
     subtitle = "Cloud & DevOps Engineer | Automating Infrastructure & Scaling Digital Worlds."
-    image = "headshot.jpg" # We will upload your photo with this name later
+    # Once you upload headshot.jpg to your repo, it will appear here
+    image = "headshot.jpg" 
     canary = "Currently architecting high-availability solutions."
 
+# This creates the navigation links at the top of your site
 [menu]
   [[menu.main]]
     name = "Projects"
