--- a/hugo.toml
+++ b/hugo.toml
@@ -1,28 +1,24 @@
 baseURL = "https://www.pruddieverse.com"
 languageCode = "en-us"
 title = "Pruddieverse"
-theme = "congo"
 
-# This section tells GitHub to download the Congo theme automatically
+# We removed 'theme = congo' to stop the error. 
+# The block below now handles the theme entirely.
 [module]
   [[module.imports]]
     path = "github.com/jpanther/congo/v2"
 
 [params]
   description = "Cloud & DevOps Engineer focused on Scalable Infrastructure."
-  # "blowfish" gives it that high-contrast, professional dark-mode look
-  colorScheme = "blowfish" 
+  colorScheme = "blowfish"
   fontFamily = "inter"
   
-  # The "Alive" Hero Section
   [params.hero]
     title = "Building the Pruddieverse."
     subtitle = "Cloud & DevOps Engineer | Automating Infrastructure & Scaling Digital Worlds."
-    # Once you upload headshot.jpg to your repo, it will appear here
     image = "headshot.jpg" 
     canary = "Currently architecting high-availability solutions."
 
-# This creates the navigation links at the top of your site
 [menu]
   [[menu.main]]
     name = "Projects"
