--- a/hugo.toml
+++ b/hugo.toml
@@ -2,8 +2,6 @@ baseURL = "https://www.pruddieverse.com/"
 languageCode = "en-us"
 title = "Pruddieverse"
 
-# We removed 'theme = congo' to stop the error. 
-# The block below now handles the theme entirely.
 [module]
   [[module.imports]]
     path = "github.com/jpanther/congo/v2"
@@ -13,6 +11,10 @@ title = "Pruddieverse"
   colorScheme = "blowfish"
   fontFamily = "inter"
   
+  # This section activates the homepage layout
+  [params.home]
+    type = "hero"
+
   [params.hero]
     title = "Building the Pruddieverse."
     subtitle = "Cloud & DevOps Engineer | Automating Infrastructure & Scaling Digital Worlds."
