--- a/hugo.yml
+++ b/hugo.yml
@@ -35,10 +35,10 @@ jobs:
         with:
           go-version: '1.20'
 
-      - name: Install Dependencies
+      - name: Install and Clean Dependencies
         run: |
           go mod tidy
-          hugo mod get github.com/jpanther/congo/v2
+          hugo mod get -u github.com/jpanther/congo/v2
 
       - name: Build with Hugo
         run: hugo --minify
