--- a/hugo.yml
+++ b/hugo.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Install and Clean Dependencies
         run: |
+          go mod init github.com/Cwendee/pruddieverse.github.io || true
           go mod tidy
           hugo mod get -u github.com/jpanther/congo/v2
 
