--- a/hugo.toml
+++ b/hugo.toml
@@ -1,34 +1,24 @@
 baseURL = "https://www.pruddieverse.com/"
 languageCode = "en-us"
 title = "Pruddieverse"
-theme = "congo"
 
 [module]
   [[module.imports]]
     path = "github.com/jpanther/congo/v2"
 
 [params]
-  description = "Cloud & DevOps Engineer focused on Scalable Infrastructure."
   colorScheme = "blowfish"
-  fontFamily = "inter"
   
-  # This section activates the homepage layout and hides the "Recent" list
   [params.homepage]
     layout = "hero"
     showRecent = false
 
   [params.hero]
     title = "Building the Pruddieverse."
-    subtitle = "Cloud & DevOps Engineer | Automating Infrastructure & Scaling Digital Worlds."
-    image = "headshot.jpg" 
-    canary = "Currently architecting high-availability solutions."
+    subtitle = "Cloud & DevOps Engineer"
 
 [menu]
   [[menu.main]]
     name = "Projects"
     url = "/projects/"
     weight = 10
-  [[menu.main]]
-    name = "About"
-    url = "/about/"
-    weight = 20
