UI Fix: Reduced top gap on internal pages and updated copyright

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,9 +1,12 @@
 baseURL = "https://www.pruddieverse.com/"
 languageCode = "en-us"
 title = "Pruddieverse"
+copyright = "2025 Prudence Anumudu"
 
 [params]
-  colorScheme = "ocean" 
+  colorScheme = "ocean"
+  # This line connects our new styling to your site
+  customCSS = ["css/custom.css"]
   
   [params.author]
     name = "Pruddie"
