--- a/hugo.toml
+++ b/hugo.toml
@@ -2,32 +2,23 @@ baseURL = "https://www.pruddieverse.com/"
 languageCode = "en-us"
 title = "Pruddieverse"
 theme = "github.com/jpanther/congo/v2"
-copyright = "2025 Prudence Anumudu"
 
 [params]
   colorScheme = "ocean"
-  # This links the CSS file that fixes the italics
+  # This fixes the Favicon and Headshot
+  favicon = "favicon.ico"
   customCss = ["css/custom.css"]
-
-  [params.header]
-    layout = "classic" # This puts the logo/name on the left and menu on the right
-
-  [params.homepage]
-    layout = "hero" # This restores the centered profile look
-    showRecent = true
 
   [params.author]
     name = "Pruddie"
-    image = "headshot.jpg"
-    headline = "Cloud & DevOps Engineer | Automating Infrastructure."
+    # Ensure this file is inside your 'static/' folder
+    image = "headshot.jpg" 
+    headline = "Cloud & DevOps Engineer"
     bio = "Building the Pruddieverse."
 
-[menu]
-  [[menu.main]]
-    name = "Projects"
-    url = "/projects/"
-    weight = 10
-  [[menu.main]]
-    name = "About"
-    url = "/about/"
-    weight = 20
+  [params.homepage]
+    layout = "hero"
+    showRecent = true
+
+  [params.header]
+    layout = "classic"
