UI RECOVERY: Forcing background, fixing headshot, and restoring menus

--- a/hugo.toml
+++ b/hugo.toml
@@ -14,7 +14,7 @@ copyright = "2025 Prudence Anumudu"
     image = "headshot.jpg"
     headline = "Cloud & DevOps Engineer"
     bio = "Building the Pruddieverse."
-    # These create the icons/cards
+    # Social links (The glowing cards)
     links = [
       { github = "https://github.com/Cwendee" },
       { linkedin = "https://www.linkedin.com/in/prudence-c-anumudu-35518656" },
@@ -24,7 +24,6 @@ copyright = "2025 Prudence Anumudu"
   [params.homepage]
     layout = "hero"
     showRecent = true
-    recentItemsToShow = 3
 
   [params.header]
     layout = "classic"
@@ -32,4 +31,13 @@ copyright = "2025 Prudence Anumudu"
   [params.footer]
     showCopyright = true
     showPoweredBy = true
-    center = true # Centers the copyright and "Powered by"
+
+[menu]
+  [[menu.main]]
+    name = "Projects"
+    url = "/projects/"
+    weight = 10
+  [[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 20
