--- a/hugo.toml
+++ b/hugo.toml
@@ -1,34 +1,29 @@
 baseURL = "https://www.pruddieverse.com/"
 languageCode = "en-us"
 title = "Pruddieverse"
-theme = "github.com/jpanther/congo/v2"
+theme = "congo"
 copyright = "2025 Prudence Anumudu"
-
-# This is the "Magic" fix for the plain HTML text issue
-relativeURLs = true
-canonifyURLs = true
 
 [params]
   colorScheme = "ocean"
-  favicon = "favicon.ico"
+  favicon = "favicon.png"
   customCss = ["css/custom.css"]
 
   [params.author]
     name = "Pruddie"
     image = "headshot.jpg"
     headline = "Cloud & DevOps Engineer"
+    bio = "Building the Pruddieverse."
     links = [
       { github = "https://github.com/Cwendee" },
       { linkedin = "https://www.linkedin.com/in/prudence-c-anumudu-35518656" },
       { email = "mailto:pruddyanumudu@gmail.com" }
     ]
 
-  [params.header]
-    layout = "classic"
-
   [params.footer]
     showCopyright = true
-    center = true
+    showPoweredBy = true
+    center = true 
 
 [menu]
   [[menu.main]]
