--- a/hugo.toml
+++ b/hugo.toml
@@ -1,22 +1,11 @@
 baseURL = "https://www.pruddieverse.com/"
-languageCode = "en-us"
-title = "Pruddieverse"
 theme = "congo"
-copyright = "2025 Prudence Anumudu"
+title = "Pruddieverse"
 
 [params]
-  colorScheme = "ocean"
   favicon = "favicon.png"
-  customCss = ["css/custom.css"]
-  [params.author]
-    name = "Pruddie"
-    image = "headshot.jpg"
-    headline = "Cloud & DevOps Engineer"
-    links = [
-      { github = "https://github.com/Cwendee" },
-      { linkedin = "https://www.linkedin.com/in/prudence-c-anumudu-35518656" },
-      { email = "mailto:pruddyanumudu@gmail.com" }
-    ]
+  # This stops the theme from automatically adding sections we don't want
+  disableHomeCollections = true 
 
 [menu]
   [[menu.main]]
@@ -29,5 +18,5 @@ copyright = "2025 Prudence Anumudu"
     weight = 20
   [[menu.main]]
     name = "Contact"
-    url = "/#contact"
+    url = "/contact/"
     weight = 30
